--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,8 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<!-- <version>${spring-cloud.version}</version> -->
-				<version>Camden.BUILD-SNAPSHOT</version>
+				<version>${spring-cloud.version}</version>
+				<!-- <version>Camden.BUILD-SNAPSHOT</version> -->
 				<!-- <version>Dalston.SR2</version> -->
 				<type>pom</type>
 				<scope>import</scope>
